--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "react-query-service",
+	"author": "Saša Đurić",
+	"license": "MIT",
 	"version": "1.0.0",
 	"description": "Wrapper around react query which provides the functionality of declaring queries outside of react.",
 	"main": "index.js",
@@ -7,8 +9,7 @@
 		"**/*"
 	],
 	"scripts": {
-		"build": "node ./scripts/build.js",
-		"link": "npm link ./lib -f"
+		"build": "node ./scripts/build.js"
 	},
 	"repository": {
 		"type": "git",
@@ -19,15 +20,12 @@
 		"query",
 		"service"
 	],
-	"author": "Saša Đurić",
-	"license": "MIT",
 	"peerDependencies": {
-		"react": "^17.0.1"
-	},
-	"dependencies": {
+		"react": "^17.0.1",
 		"react-query": "^3.12.0"
 	},
 	"devDependencies": {
-		"@types/react": "^17.0.2"
+		"@types/react": "^17.0.2",
+		"react-query": "^3.12.0"
 	}
 }
