--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 	"devDependencies": {
 		"@types/react": "^17.0.2",
 		"react-query": "^3.12.0"
+	},
+	"dependencies": {
+		"typescript": "^4.2.3"
 	}
 }
