--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
 		"service"
 	],
 	"peerDependencies": {
-		"react": "^17.0.1",
-		"react-query": "^3.12.0"
+		"react": "^17.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.2",
-		"react-query": "^3.12.0"
+		"typescript": "^4.2.3"
 	},
 	"dependencies": {
-		"typescript": "^4.2.3"
+		"react-query": "^3.12.1"
 	}
 }
