--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"license": "MIT",
 	"version": "1.0.1",
 	"description": "Wrapper around react query which provides the functionality of declaring queries outside of react.",
-	"main": "index.js",
+	"main": "lib/index.js",
 	"files": [
-		"**/*"
+		"lib",
+		"LICENCE",
+		"readme.md",
+		"package.json"
 	],
 	"scripts": {
-		"build": "node ./scripts/build.js"
+		"build": "node ./scripts/build.js",
+		"lint": "prettier --write src/**/*.ts --ignore-unknown"
 	},
 	"repository": {
 		"type": "git",
@@ -25,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.2",
+		"prettier": "2.2.1",
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
