--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "react-query-service",
 	"author": "Saša Đurić",
 	"license": "MIT",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "Wrapper around react query which provides the functionality of declaring queries outside of react.",
 	"main": "lib/index.js",
 	"files": [
-		"lib",
+		"lib/*",
 		"LICENCE",
 		"readme.md",
 		"package.json"
