--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,6 +25,6 @@ jobs:
               run: npm run build
 
             - name: Publish
-              run: cd lib && npm publish --access=public
+              run: npm publish --access=public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
